  * library: renamed to libproc-2 and reset to 0:0:0
  * library: add support for accessing smaps_rollup        issue #112, #201
  * library: add support for accessing autogroups
  * pkill: Check for lt- variants of program name          issue #192
  * pgrep: Add newline after regex error message           merge #91
  * pgrep: Fix selection where uid/gid > 2^31              merge !146
  * ps: Add OOM and OOMADJ fields                          issue #198
  * ps: Add IO Accounting fields                           issue #184
  * ps: Add PSS and USS fields                             issue #112
  * ps: Add two new autogroup fields
  * ps: Ignore SIGURG                                      merge !142
  * slabtop: Don't combine d and o options                 issue #160
  * sysctl: Add support for systemd glob patterns          issue #191
  * sysctl: Check resolved path to be under /proc/sys      issue #179
  * sysctl: return non-zero if EINVAL return for write     merge #76
  * sysctl.conf.5: Note max line length                    issue #77
  * top: added LOGID similar to 3.3.13 ps LUID
  * top: added EXE identical to 3.3.17 ps EXE
  * top: exploit some library smaps_rollup provisions      issue #112
  * top: added four new IO accounting fields               issue #184
  * top: 'F' key is now a new forest view 'focus' toggle
  * top: summary area memory lines can print two abreast
  * top: added two new autogroup fields
  * top: added long versions of command line options
  * uptime: print short/pretty format correctly            issue #217
  * vmstat: add -y option to remove first line             merge !72

procps-ng-3.3.17
---------------
  * library: Incremented to 8:3:0
    (no removals or additions, internal changes only)
  * all: properly handle utf8 cmdline translations         issue #176
  * kill: Pass int to signalled process                    merge #32
  * pgrep: Pass int to signalled process                   merge #32