@@ -7,7 +7,7 @@
 .\" the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.
 .\"
-.TH PGREP "1" "2020-06-04" "procps-ng" "User Commands"
+.TH PGREP "1" "2021-10-26" "procps-ng" "User Commands"
 .SH NAME
 pgrep, pkill, pidwait \- look up, signal, or wait for processes based on name and other attributes
 .SH SYNOPSIS
@@ -177,6 +177,10 @@ Fail if pidfile (see \fB\-F\fR) not locked.
 \fB\-r\fR, \fB\-\-runstates\fR \fID,R,S,Z,\fP...
 Match only processes which match the process state.
 .TP
+\fB\-\-cgroup \fIname\fP,...
+Match on provided control group (cgroup) v2 name. See
+.BR cgroups (8)
+.TP
 \fB\-\-ns \fIpid\fP
 Match processes that belong to the same namespaces. Required to run as
 root to match processes from other users. See \fB\-\-nslist\fR for how to
@@ -282,7 +286,8 @@ Defunct processes are reported.
 .BR killall (1),
 .BR skill (1),
 .BR kill (1),
-.BR kill (2)
+.BR kill (2),
+.BR cgroups (8)
 .SH AUTHOR
 .UR kjetilho@ifi.uio.no
 Kjetil Torgrim Homme
